# kubernetes-mcp-server

./: README.md  pyproject.toml  run-ds.py  run.py
.github/workflows/: build.yml  publish.yml
src/k8s_manager/: __init__.py  __main__.py  manager.py  prompt_templates.py  schemas.py  server.py
