[project]
name = "k8s-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "numpy>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
]

[tool.uv.workspace]
members = ["k8s"]
